--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   build:
     runs-on: docker
+    conatiner:
+      image: ghcr.io/txstockdata/ubuntu-action-base:v1.1
     steps:
       - uses: https://github.com/docker/setup-qemu-action@v3
       - uses: https://github.com/docker/setup-buildx-action@v3
